# SWMaestro_1st_Assignment

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Client/Assets/GooglePlayGames/: GameInfo.cs
Client/Assets/Plugins/: protobuf-net.dll.mdb
Client/Assets/Plugins/Android/MainLibProj/: AndroidManifest.xml
Client/Assets/Resources/Prefabs/: Block.prefab  Cell.prefab
Client/Assets/Scene/: game.unity
Client/Assets/Script/Control/: Game.cs  PlayerController.cs
Client/Assets/Script/Google/: GoogleConstants.cs
Client/Assets/Script/Logic/: Block.cs  Logic.cs  MergeBlock.cs  Vec2.cs
Client/Assets/Script/NetworkClient/: NetworkClient.cs  NetworkClient_Network.cs  NetworkClient_ReceivePacket.cs  NetworkClient_SendPacket.cs
Client/Assets/Script/Packet/: PacketHeader.cs
Client/Assets/Script/PacketMsg/: PacketProtobuf.cs
Client/Assets/Script/Socket/: TCPClient.cs  TCPReceiveToken.cs  TCPSendToken.cs
Client/Assets/Script/View/: BlockView.cs  CellView.cs
Client/ProjectSettings/: GooglePlayGameSettings.txt  ProjectSettings.asset
Server/: package.json
Server/Database/: CMakeLists.txt  Database.vcxproj  Database.vcxproj.filters
Server/Database/include/: DB.h
Server/Database/pch/: stdafx.h
Server/Database/src/: DB.cpp
Server/Packet/: CMakeLists.txt  Packet.vcxproj  Packet.vcxproj.filters
Server/Packet/include/: PacketHeader.h
Server/Packet/src/: PacketHeader.cpp
Server/PacketProtobuf/: CMakeLists.txt  PacketProtobuf.vcxproj  PacketProtobuf.vcxproj.filters
Server/PacketProtobuf/Autogen/: PkEnumInfo.h  PksInfo.h
Server/PacketProtobuf/build_script/: PkEnumInfo.ejs  PksInfo.ejs  package.json  packet_info.js  prebuild.js
Server/PacketProtobuf/include/: PkEnumInfoHelper.h  PksInfoHelper.h
Server/PacketProtobuf/proto/enum/: enum_cs.proto  enum_sc.proto
Server/PacketProtobuf/proto/etc/: struct_etc.proto
Server/PacketProtobuf/proto/struct/: struct_cs.proto  struct_sc.proto
Server/PacketProtobuf/protobuf/: config.h
Server/PacketProtobuf/protobuf/google/protobuf/compiler/: command_line_interface.cc  subprocess.cc
Server/PacketProtobuf/protobuf/google/protobuf/stubs/: hash.h
Server/PacketProtobuf/protoc/: common.xslt  xml.xslt
Server/PacketProtobuf/src_proto/: proto.protobin
Server/PacketProtobuf/src_proto/enum/: enum_cs.pb.cc  enum_cs.pb.h  enum_sc.pb.cc  enum_sc.pb.h
Server/PacketProtobuf/src_proto/etc/: struct_etc.pb.cc  struct_etc.pb.h
Server/PacketProtobuf/src_proto/struct/: struct_cs.pb.cc  struct_cs.pb.h  struct_sc.pb.cc  struct_sc.pb.h
Server/Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
Server/Server/include/: Client.h  Server.h
Server/Server/pch/: stdafx.h
Server/Server/src/: Client.cpp  Server.cpp  main.cpp
Server/ServerShared/: CMakeLists.txt  ServerShared.vcxproj  ServerShared.vcxproj.filters
Server/ServerShared/include/: AbstractServer.h  DBManager.h  DeltaTime.h  NetworkClient.h  PacketHandler.h
Server/ServerShared/pch/: stdafx.h
Server/ServerShared/src/: AbstractServer.cpp  DBManager.cpp  DeltaTime.cpp  NetworkClient.cpp
Shared/2048/: 2048.sln
Shared/SWMaetro1st/: SWMaetro1st.sln
Shared/SWMaetro1st/Logic/: AssemblyInfo.cpp  Logic.cpp  Logic.h  Logic.vcxproj  Logic.vcxproj.filters  ReadMe.txt  Stdafx.cpp
bin_server/: db_init_query.txt  kill_all.sh  run_all.sh
