CMAKE_MINIMUM_REQUIRED (VERSION 3.4)
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeHelper/CMake")
INCLUDE(msvc_support)

## Exe setting
RUNTIME_LIBRARY_OPTION(Release /MT)
RUNTIME_LIBRARY_OPTION(Debug /MTd)

SET(SERVER_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Server)

# Common directores
SET(PCH_DIR "pch")
SET(HEADER_DIR "include")
SET(SRC_DIR "src")
SET(INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin_server)

SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTIRHEAD ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost 1.59.0 REQUIRED COMPONENTS system filesystem)

SET(PCH_HEADER ${PCH_DIR}/stdafx.h)
SET(PCH_SRC ${PCH_DIR}/stdafx.cpp)

# Project name
SET(DB_PROJECT_NAME "Database")
SET(FGNET_CLIENT_PROJECT_NAME "libFGClient")
SET(FGNET_SHARED_PROJECT_NAME "libFGNetworkShared")
SET(FGNET_SERVER_PROJECT_NAME "libFGServer")
SET(PACKET_PROJECT_NAME "Packet")
SET(SS_PROJECT_NAME "ServerShared")
SET(S_PROJECT_NAME "Server")
SET(PROTOBUF_PROJECT_NAME "PacketProtobuf")


# Server projects
SET(PROTOBUF_ROOT_DIR ${SERVER_DIR}/PacketProtobuf)
SET(PROTOBUF_AUTOGEN_DIR ${SERVER_DIR}/PacketProtobuf/Autogen)
SET(PROTOBUF_PROTO_DIR ${SERVER_DIR}/PacketProtobuf/src_proto)

SET(DB_ROOT_DIR ${SERVER_DIR}/Database)
SET(EX_ROOT_DIR ${SERVER_DIR}/External)

SET(FGNET_ROOT_DIR ${SERVER_DIR}/FG-Network)
SET(FGNET_CLIENT_ROOT_DIR ${FGNET_ROOT_DIR}/libFGClient)
SET(FGNET_SERVER_ROOT_DIR ${FGNET_ROOT_DIR}/libFGServer)
SET(FGNET_SHARED_ROOT_DIR ${FGNET_ROOT_DIR}/libFGNetworkShared)

SET(PACKET_ROOT_DIR ${SERVER_DIR}/Packet)
SET(SS_ROOT_DIR ${SERVER_DIR}/ServerShared)
SET(S_ROOT_DIR ${SERVER_DIR}/Server)

IF(${CMAKE_EXE_LINKER_FLAGS} MATCHES "/machine:x64")
	SET (ARCH "64")
ELSE()
	SET (ARCH "86")
ENDIF()

# Generate library projects
IF(WIN32)
	ADD_DEFINITIONS(-DUNICODE)
	ADD_DEFINITIONS(-D_UNICODE)
	ADD_COMPILE_OPTIONS("/EHsc")
	ADD_COMPILE_OPTIONS($<$<CONFIG:Debug>:/MDd>)
	ADD_COMPILE_OPTIONS($<$<CONFIG:Release>:/MD>)
ELSEIF(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z")
ENDIF()

ADD_SUBDIRECTORY(${PROTOBUF_ROOT_DIR})
ADD_SUBDIRECTORY(${DB_ROOT_DIR})
ADD_SUBDIRECTORY(${FGNET_ROOT_DIR})
ADD_SUBDIRECTORY(${PACKET_ROOT_DIR})
ADD_SUBDIRECTORY(${SS_ROOT_DIR})
ADD_SUBDIRECTORY(${S_ROOT_DIR})
