CMAKE_MINIMUM_REQUIRED (VERSION 3.4)

SET(PROJECT_NAME ${DB_PROJECT_NAME})
PROJECT(${PROJECT_NAME})

SET(PROJECT_ROOT_DIR ${DB_ROOT_DIR})
SET(HEADER_FILES "")
SET(SRC_FILES "")
SET(SQLITE_SRC_FILES "")

FILE(GLOB HEADER_FILES
${PROJECT_ROOT_DIR}/${HEADER_DIR}/*.h
${PROJECT_ROOT_DIR}/${PCH_HEADER}
${EX_ROOT_DIR}/SQLite/*.h
)

FILE(GLOB SRC_FILES
${PROJECT_ROOT_DIR}/${SRC_DIR}/*.cpp
${PROJECT_ROOT_DIR}/${PCH_SRC}
${EX_ROOT_DIR}/SQLite/*.c
)

FILE(GLOB SQLITE_SRC_FILES
${EX_ROOT_DIR}/SQLite/*.c
)

ADD_LIBRARY(${PROJECT_NAME}
${HEADER_FILES}
${SRC_FILES}
)

MSVC_SET_PCH(${PROJECT_NAME}
${PCH_HEADER}
${PCH_SRC}
)

MSVC_EXCLUDE_PCH("${SQLITE_SRC_FILES}")

INCLUDE_DIRECTORIES(${PCH_DIR})
INCLUDE_DIRECTORIES(${HEADER_DIR})
INCLUDE_DIRECTORIES(${EX_ROOT_DIR}/SQLite)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

IF(WIN32)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES})
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_LIBRARIES} pthread dl)
ENDIF()
